syntax = "proto3";

package pingpong;

// The Ping service definition.
service PingPong {
  rpc SendPing (PingRequest) returns (PongResponse);
}

// The request message containing the ping.
message PingRequest {
  string message = 1;
}

// The response message containing the pong.
message PongResponse {
  string message = 1;
}
